dioxus-sugar/tests/classes_compile_failures/literal_values.rs
use dioxus_sugar::classes;

#[classes(42)]
struct PropsInteger {}

#[classes("42")]
struct PropsString {}

fn main() {}